src/objects/Apttus__DocumentAgreementClause__c.object
<CustomObject>
    <description>Agreement clauses in an agreement document</description>
    <fields>
        <fullName>Apttus__AgreementClauseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agreement clause id</description>
        <inlineHelpText>Agreement clause id</inlineHelpText>
        <label>Agreement Clause</label>
        <referenceTo>Apttus__Agreement_Clause__c</referenceTo>
        <relationshipLabel>Document Agreement Clauses</relationshipLabel>
        <relationshipName>DocumentAgreementClauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__ClauseOrder__c</fullName>
        <description>Order of the clause in the agreement document</description>
        <inlineHelpText>Order of the clause in the agreement document</inlineHelpText>
        <label>Clause Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentVersionDetailId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Document version detail id</description>
        <inlineHelpText>Document version detail id</inlineHelpText>
        <label>Document Version Detail</label>
        <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
        <relationshipLabel>Document Agreement Clauses</relationshipLabel>
        <relationshipName>DocumentAgreementClauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Document Agreement Clause</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Agreement Clause Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Agreement Clauses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>